Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -309,13 +309,13 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 * `N` 
    Сортировать по идентификатору процесса. 
 
-* `Т` 
+`Т` 
 
     Сортировать по времени работы. 
 
 `P` 
 
-* Сортировать по проценту использования ЦП. 
+    Сортировать по проценту использования ЦП. 
  
 >Для переключения между порядком убывания и возрастания просто нажмите `R`.
 
