Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -320,37 +320,32 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 
 Другие интересные ключи для взаимодействия с `top`:
 
-`?` или `h` 
+* `?` или `h` 
 
-Помощь. 
+    Помощь. 
+* `k` 
 
-`k` 
+    Завершить процесс. `top` запросит `PID` процесса, который нужно убить, а также послать сигнал (по умолчанию `SIGTERM` или `15`). 
+* `r`
 
-Завершить процесс. `top` запросит `PID` процесса, который нужно убить, а также послать сигнал (по умолчанию `SIGTERM` или `15`). 
+    Изменить приоритет процесса (`renice`). `top` спросит у вас значение `nice`. Возможные значения находятся в диапазоне от -20 до 19, но только суперпользователь (`root`) может установить для него значение, отрицательное или меньшее, чем текущее. 
+* `u`
 
-`r`
+   Список процессов определенного пользователя (по умолчанию отображаются процессы от всех пользователей). 
+* `c` 
 
-Изменить приоритет процесса (`renice`). `top` спросит у вас значение `nice`. Возможные значения находятся в диапазоне от -20 до 19, но только суперпользователь (`root`) может установить для него значение, отрицательное или меньшее, чем текущее. 
+    Показывать абсолютные пути программ и различать процессы пользовательского пространства и процессы пространства ядра (в квадратных скобках). 
 
-`u`
+* `V` 
 
-Список процессов определенного пользователя (по умолчанию отображаются процессы от всех пользователей). 
+    Дерево/иерархия процессов. 
 
-`c` 
+* `t` и `m` 
 
-Показывать абсолютные пути программ и различать процессы пользовательского пространства и процессы пространства ядра (в квадратных скобках). 
+    Измените внешний вид показаний ЦП и памяти соответственно в четырехэтапном цикле: первые два нажатия показывают индикаторы выполнения, третье скрывает полосу, а четвертое возвращает ее. 
+* `W` 
 
-`V` 
-
-Дерево/иерархия процессов. 
-
-`t` и `m` 
-
-Измените внешний вид показаний ЦП и памяти соответственно в четырехэтапном цикле: первые два нажатия показывают индикаторы выполнения, третье скрывает полосу, а четвертое возвращает ее. 
-
-`W` 
-
-Сохранить настройки конфигурации в `~/.toprc`.
+    Сохранить настройки конфигурации в `~/.toprc`.
 
 >Более интересная и удобная версия `top` - это `htop`. Другая - возможно, более исчерпывающая альтернатива это `atop`. Если они еще не установлены в вашей системе, используйте диспетчер пакетов, чтобы установить их и попробовать.
 
