Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -350,3 +350,46 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 >Более интересная и удобная версия `top` - это `htop`. Другая - возможно, более исчерпывающая альтернатива это `atop`. Если они еще не установлены в вашей системе, используйте диспетчер пакетов, чтобы установить их и попробовать.
 
 ### Объяснение вывода `top`
+
+Вывод `top` разделен на две области: `область сводки` и `область задач`.
+
+#### Область сводки `top`
+
+*Область сводки* состоит из пяти верхних строк и дает нам следующую информацию:
+* `top - 11:10:29 up 2:21, 1 user, load average: 0,11, 0,20, 0,14`
+    * `current time`(в 24-часовом формате): `11:20:29` 
+    * `uptime`(сколько времени система была запущена и работала): `up 2:21` 
+    * количество пользователей, вошедших в систему, и средняя загрузка ЦП за последние 1, 5 и 15 минут соответственно: `load average: 0,11, 0,20, 0,14` 
+
+* `Tasks: 73 total, 1 running, 72 sleeping, 0 stopped, 0 zombie` (информация о процессах) 
+    * общее количество процессов в активном режиме: `73 total` 
+    * (выполняемые): `1 running` 
+    * спящие (ожидающие возобновления исполнения): `72 sleeping`
+    * (по сигналу управления заданием): `0 stopped` 
+    * зомби (те, которые завершили выполнение, но все еще ждут, пока их родительский процесс удалит их из таблицы процессов): `0 zombie` 
+
+* `%Cpu(s): 0,0 us, 0,3 sy, 0,0 ni, 99,7 id, 0,0 wa, 0,0 hi, 0,0 si, 0,0 st` (процент процессорного времени потрачено на) 
+    * пользовательские процессы: `0,0 us` 
+    * система/процессы ядра: `0,4 sy`
+    * процессы установлены на хорошее значение - чем лучше значение, тем ниже приоритет: `0,0 ni`
+    * ничего - время простоя процессора: `99,7 id`
+    * процессы, ожидающие операций ввода/вывода: `0,0 wa` 
+    * процессы, обслуживающие аппаратные прерывания - периферийные устройства, отправляющие процессору сигналы, требующие внимания: `0,0 hi` 
+    * процессы, обслуживающие программные прерывания: `0,0 si` 
+    * процессы, обслуживающие задачи других виртуальных машин в виртуальной среде, следовательно, крадут время: `0,0 st` 
+
+* `KiB Mem : 1020332 total, 909492 free, 38796 used, 72044 buff/cache` (информация о памяти в килобайтах) 
+    * общий объем памяти: `1020332 total` 
+    * неиспользуемая память: `909492 free` 
+    * используемая память: `38796 used`  
+    * память, которая буферизуется и кэшируется, чтобы избежать чрезмерного доступа к диску: `72044 buff/cache` 
+    
+Обратите внимание,`total` является суммой трех других значений - `free`, `used` и `buff/cache` - (в нашем случае примерно 1 ГБ). 
+
+* `KiB Swap: 1046524 total, 1046524 free, 0 used. 873264 avail Mem` (информация подкачки в килобайтах) 
+    * общий объем подкачки: `1046524 total` 
+    * неиспользуемое пространство подкачки: `1046524 free` 
+    * пространство подкачки используется: `0 used` 
+    * объем памяти подкачки, который может быть выделен процессам без дополнительной подкачки: `873264 avail Mem`
+
+#### Область задач `top`: поля и столбцы
