Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -303,18 +303,17 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 ```
 `top` позволяет пользователю некоторое взаимодействие. По умолчанию вывод сортируется по проценту процессорного времени, используемого каждым процессом, в порядке убывания. Это поведение можно изменить, нажав следующие клавиши `top`: 
 
-* `M`
+    `M`
+        Сортировать по использованию памяти. 
 
-    Сортировать по использованию памяти. 
-* `N` 
+    `N` 
+        Сортировать по идентификатору процесса. 
 
-   Сортировать по идентификатору процесса. 
 * `Т` 
+    * Сортировать по времени работы. 
 
-    Сортировать по времени работы. 
-* `P` 
-
-    Сортировать по проценту использования ЦП. 
+    `P` 
+        * Сортировать по проценту использования ЦП. 
  
 >Для переключения между порядком убывания и возрастания просто нажмите `R`.
 
@@ -349,8 +348,8 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 
 >Более интересная и удобная версия `top` - это `htop`. Другая - возможно, более исчерпывающая альтернатива это `atop`. Если они еще не установлены в вашей системе, используйте диспетчер пакетов, чтобы установить их и попробовать.
 
-### Объяснение вывода `top`
 
+### Объяснение вывода `top`
 Вывод `top` разделен на две области: `область сводки` и `область задач`.
 
 #### Область сводки `top`
