Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -304,7 +304,7 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 `top` позволяет пользователю некоторое взаимодействие. По умолчанию вывод сортируется по проценту процессорного времени, используемого каждым процессом, в порядке убывания. Это поведение можно изменить, нажав следующие клавиши `top`: 
 
     `M`
-        Сортировать по использованию памяти. 
+    * Сортировать по использованию памяти. 
 
     `N` 
         Сортировать по идентификатору процесса. 
@@ -312,39 +312,29 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 * `Т` 
     * Сортировать по времени работы. 
 
-    `P` 
-        * Сортировать по проценту использования ЦП. 
+* `P` 
+    * Сортировать по проценту использования ЦП. 
  
 >Для переключения между порядком убывания и возрастания просто нажмите `R`.
 
 Другие интересные ключи для взаимодействия с `top`:
 
 * `?` или `h` 
-
-    Помощь. 
+    * Помощь. 
 * `k` 
-
-    Завершить процесс. `top` запросит `PID` процесса, который нужно убить, а также послать сигнал (по умолчанию `SIGTERM` или `15`). 
+    * Завершить процесс. `top` запросит `PID` процесса, который нужно убить, а также послать сигнал (по умолчанию `SIGTERM` или `15`). 
 * `r`
-
-    Изменить приоритет процесса (`renice`). `top` спросит у вас значение `nice`. Возможные значения находятся в диапазоне от -20 до 19, но только суперпользователь (`root`) может установить для него значение, отрицательное или меньшее, чем текущее. 
+    * Изменить приоритет процесса (`renice`). `top` спросит у вас значение `nice`. Возможные значения находятся в диапазоне от -20 до 19, но только суперпользователь (`root`) может установить для него значение, отрицательное или меньшее, чем текущее. 
 * `u`
-
-   Список процессов определенного пользователя (по умолчанию отображаются процессы от всех пользователей). 
+    * Список процессов определенного пользователя (по умолчанию отображаются процессы от всех пользователей). 
 * `c` 
-
-    Показывать абсолютные пути программ и различать процессы пользовательского пространства и процессы пространства ядра (в квадратных скобках). 
-
+    * Показывать абсолютные пути программ и различать процессы пользовательского пространства и процессы пространства ядра (в квадратных скобках). 
 * `V` 
-
-    Дерево/иерархия процессов. 
-
+    * Дерево/иерархия процессов. 
 * `t` и `m` 
-
-    Измените внешний вид показаний ЦП и памяти соответственно в четырехэтапном цикле: первые два нажатия показывают индикаторы выполнения, третье скрывает полосу, а четвертое возвращает ее. 
+    * Измените внешний вид показаний ЦП и памяти соответственно в четырехэтапном цикле: первые два нажатия показывают индикаторы выполнения, третье скрывает полосу, а четвертое возвращает ее. 
 * `W` 
-
-    Сохранить настройки конфигурации в `~/.toprc`.
+    * Сохранить настройки конфигурации в `~/.toprc`.
 
 >Более интересная и удобная версия `top` - это `htop`. Другая - возможно, более исчерпывающая альтернатива это `atop`. Если они еще не установлены в вашей системе, используйте диспетчер пакетов, чтобы установить их и попробовать.
 
