--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -303,14 +303,14 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 ```
 `top` позволяет пользователю некоторое взаимодействие. По умолчанию вывод сортируется по проценту процессорного времени, используемого каждым процессом, в порядке убывания. Это поведение можно изменить, нажав следующие клавиши `top`: 
 
-* `M`
-    * Сортировать по использованию памяти. 
-* `N` 
-    * Сортировать по идентификатору процесса. 
-* `Т` 
-    * Сортировать по времени работы. 
-* `P` 
-    * Сортировать по проценту использования ЦП. 
+- `M`
+  - Сортировать по использованию памяти. 
+- `N` 
+  - Сортировать по идентификатору процесса. 
+- `Т` 
+  - Сортировать по времени работы. 
+- `P` 
+  - Сортировать по проценту использования ЦП. 
  
 >Для переключения между порядком убывания и возрастания просто нажмите `R`.
 
@@ -348,7 +348,7 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
     * количество пользователей, вошедших в систему, и средняя загрузка ЦП за последние 1, 5 и 15 минут соответственно: `load average: 0,11, 0,20, 0,14` 
 
 * `Tasks: 73 total, 1 running, 72 sleeping, 0 stopped, 0 zombie` (информация о процессах) 
-  * общее количество процессов в активном режиме: `73 total` 
+    * общее количество процессов в активном режиме: `73 total` 
     * (выполняемые): `1 running` 
     * спящие (ожидающие возобновления исполнения): `72 sleeping`
     * (по сигналу управления заданием): `0 stopped` 
