--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -303,11 +303,13 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 ```
 `top` позволяет пользователю некоторое взаимодействие. По умолчанию вывод сортируется по проценту процессорного времени, используемого каждым процессом, в порядке убывания. Это поведение можно изменить, нажав следующие клавиши `top`: 
 
-`M`
+- `M`
 +
 Сортировать по использованию памяти. 
+
+`N`
 +
-`N`+Сортировать по идентификатору процесса.+
+Сортировать по идентификатору процесса.
 
 `Т`  Сортировать по времени работы.
 `P`  Сортировать по проценту использования ЦП. 
