--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -335,12 +335,12 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 >Более интересная и удобная версия `top` - это `htop`. Другая - возможно, более исчерпывающая альтернатива это `atop`. Если они еще не установлены в вашей системе, используйте диспетчер пакетов, чтобы установить их и попробовать.
 
 
-### Объяснение вывода `top`
+### Расшифровка вывода `top`
 Вывод `top` разделен на две области: `область сводки` и `область задач`.
 
-#### Область сводки `top`
+#### Область суммарной информации `top`
 
-*Область сводки* состоит из пяти верхних строк и дает нам следующую информацию:
+*Область суммарной информации* состоит из пяти верхних строк и дает нам следующую информацию:
 * `top - 11:10:29 up 2:21, 1 user, load average: 0,11, 0,20, 0,14`
     * `current time`(в 24-часовом формате): `11:20:29` 
     * `uptime`(сколько времени система была запущена и работала): `up 2:21` 
@@ -367,8 +367,7 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
     * общий объем памяти: `1020332 total` 
     * неиспользуемая память: `909492 free` 
     * используемая память: `38796 used`  
-    * память, которая буферизуется и кэшируется, чтобы избежать чрезмерного доступа к диску: `72044 buff/cache` 
-    
+    * память, которая буферизуется и кэшируется, чтобы избежать чрезмерного доступа к диску: `72044 buff/cache`  
 Обратите внимание,`total` является суммой трех других значений - `free`, `used` и `buff/cache` - (в нашем случае примерно 1 ГБ). 
 
 * `KiB Swap: 1046524 total, 1046524 free, 0 used. 873264 avail Mem` (информация подкачки в килобайтах) 
@@ -377,4 +376,32 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
     * пространство подкачки используется: `0 used` 
     * объем памяти подкачки, который может быть выделен процессам без дополнительной подкачки: `873264 avail Mem`
 
+
 #### Область задач `top`: поля и столбцы
+
+Под областью суммарной информации находится область задач, которая включает ряд полей и столбцов, сообщающих информацию о запущенных процессах: 
+
+* `PID`  
+Идентификатор процесса. 
+* `USER`  
+Пользователь, выполнивший команду, сгенерировавшую процесс. 
+* `PR`  
+Приоритет процесса ядру. 
+* `NI`  
+Хорошая ценность процесса. Более низкие значения имеют более высокий приоритет, чем более высокие. 
+* `VIRT`  
+Общий объем памяти, используемый процессом (включая Swap). 
+* `RES`  
+Оперативная память, используемая процессом. 
+* `SHR`  
+Общая память процесса с другими процессами. 
+* `S`  
+Статус процесса. Значения включают в себя: S (прерывистый сон - ожидание завершения события), R (работоспособен - выполняется или находится в очереди для выполнения) или Z (дочерние процессы, завершенные зомби, структуры данных которых еще не были удалены из таблицы процессов. ). 
+* `%CPU`  
+Процент процессора, используемого процессом. 
+* `%MEM`  
+Процент ОЗУ, используемого процессом, то есть значение RES, выраженное в процентах. 
+* `TIME+`  
+Общее время активности процесса. 
+* `COMMAND`  
+Имя команды / программы, сгенерировавшей процесс.
