Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -388,7 +388,7 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 * `PR`  
 Приоритет процесса ядру. 
 * `NI`  
-Хорошая ценность процесса. Более низкие значения имеют более высокий приоритет, чем более высокие. 
+Значение приоритета процесса. Более низкие значения имеют более высокий приоритет, чем более высокие. 
 * `VIRT`  
 Общий объем памяти, используемый процессом (включая Swap). 
 * `RES`  
@@ -396,12 +396,110 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 * `SHR`  
 Общая память процесса с другими процессами. 
 * `S`  
-Статус процесса. Значения включают в себя: S (прерывистый сон - ожидание завершения события), R (работоспособен - выполняется или находится в очереди для выполнения) или Z (дочерние процессы, завершенные зомби, структуры данных которых еще не были удалены из таблицы процессов. ). 
+Статус процесса. Значения включают в себя: `S` (прерывистый сон - ожидание завершения события), `R` (рабочий - выполняется или находится в очереди для выполнения) или `Z` (зомби - завершенные дочерние процессы, структуры данных которых еще не были удалены из таблицы процессов). 
 * `%CPU`  
 Процент процессора, используемого процессом. 
 * `%MEM`  
-Процент ОЗУ, используемого процессом, то есть значение RES, выраженное в процентах. 
+Процент ОЗУ, используемого процессом, то есть значение `RES`, выраженное в процентах. 
 * `TIME+`  
 Общее время активности процесса. 
 * `COMMAND`  
-Имя команды / программы, сгенерировавшей процесс.
+Имя команды/программы, сгенерировавшей процесс.
+
+
+### Статический просмотр процессов: `ps`
+
+Как было сказано выше, `ps` показывает список процессов. Чтобы увидеть все процессы с помощью терминала (tty), введите `ps a`:
+```
+$ ps a
+  PID TTY      STAT   TIME COMMAND
+  386 tty1     Ss+    0:00 /sbin/agetty --noclear tty1 linux
+  424 tty7     Ssl+   0:00 /usr/lib/xorg/Xorg :0 -seat seat0 (...)
+  655 pts/0    Ss     0:00 -bash
+ 1186 pts/0    R+     0:00 ps a
+ (...)
+ ```
+ 
+ #### Описание синтаксиса параметров и вывода `ps`
+ 
+Что касается опций, `ps` может принимать три разных стиля: BSD, UNIX и GNU. Давайте посмотрим, как каждый из этих стилей будет работать при сообщении информации о конкретном идентификаторе процесса:
+
+* BSD  
+Дефис не ставится перед параметрами:
+```
+$ ps p 811
+  PID TTY      STAT   TIME COMMAND
+  811 pts/0    S      0:00 -su
+```
+* UNIX  
+Параметры идут после дефиса:
+```
+$ ps -p 811
+  PID TTY          TIME CMD
+  811 pts/0    00:00:00 bash
+```
+* GNU  
+Параметры сопровождаются двойным дефисом в начале:
+```
+$ ps --pid 811
+  PID TTY          TIME CMD
+  811 pts/0    00:00:00 bash
+```
+Во всех трех случаях `ps` сообщает информацию о процессе с `PID` равным `811`, в данном случае это `bash`. 
+
+Точно так же вы можете использовать `ps` для поиска процессов, запущенных конкретным пользователем: 
+* `ps U carol` (BSD) 
+* `ps -u carol` (UNIX) 
+* `ps --user carol` (GNU) 
+
+Давайте проверим процессы, запущенные `carol`:
+```
+$ ps U carol
+  PID TTY      STAT   TIME COMMAND
+  811 pts/0    S      0:00 -su
+  898 pts/0    R+     0:00 ps U carol
+```
+Она запустила два процесса: `bash` (`-su`) и `ps` (`ps U carol`). Столбец `STAT` сообщает нам состояние процесса (см. ниже). 
+
+Мы можем получить максимум от `ps`, комбинируя некоторые из его параметров. Очень полезной командой (выводящей результат, аналогичной команде `top`) является `ps aux` (стиль BSD). В этом случае отображаются процессы из всех оболочек (не только текущей). Смысл переключателей следующий: 
+* `а`  
+Показать процессы, подключенные к `tty` или терминалу. 
+* `u`  
+Формат отображения, ориентированный на пользователя. 
+* `x`  
+Показать процессы, не подключенные к `tty` или терминалу.
+```
+$ ps aux
+USER       PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
+root         1  0.0  0.1 204504  6780 ?        Ss   14:04   0:00 /sbin/init
+root         2  0.0  0.0      0     0 ?        S    14:04   0:00 [kthreadd]
+root         3  0.0  0.0      0     0 ?        S    14:04   0:00 [ksoftirqd/0]
+root         5  0.0  0.0      0     0 ?        S<   14:04   0:00 [kworker/0:0H]
+root         7  0.0  0.0      0     0 ?        S    14:04   0:00 [rcu_sched]
+root         8  0.0  0.0      0     0 ?        S    14:04   0:00 [rcu_bh]
+root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
+(...)
+```
+Поясним столбцы: 
+* `USER`  
+Владелец процесса. 
+* `PID`  
+Идентификатор процесса. 
+* `%CPU`  
+Процент использования ЦП. 
+* `%MEM`  
+Процент используемой физической памяти. 
+* `VSZ`  
+Виртуальная память процесса в KiB. 
+* `RSS`  
+Физическая память без подкачки, используемая процессом в KiB. 
+* `TT`  
+Терминал (tty), контролирующий процесс. 
+* `STAT`  
+Код, представляющий состояние процесса. Помимо S, R и Z (которые мы видели при описании вывода top), другие возможные значения включают: D (непрерывный сон - обычно ожидает ввода / вывода), T (остановлен - обычно по управляющему сигналу). Некоторые дополнительные модификаторы включают: <(высокий приоритет - не подходит для других процессов), N (низкий приоритет - подходит для других процессов) или + (в группе процессов переднего плана). 
+* `STARTED`  
+Время начала процесса. 
+* `TIME`  
+Накопленное процессорное время. 
+* `COMMAND`  
+Команда, запустившая процесс.
