Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -490,16 +490,44 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 * `%MEM`  
 Процент используемой физической памяти. 
 * `VSZ`  
-Виртуальная память процесса в KiB. 
+Виртуальная память процесса в KB. 
 * `RSS`  
-Физическая память без подкачки, используемая процессом в KiB. 
+Физическая память без подкачки, используемая процессом в KB. 
 * `TT`  
-Терминал (tty), контролирующий процесс. 
+Терминал (`tty`), контролирующий процесс. 
 * `STAT`  
-Код, представляющий состояние процесса. Помимо S, R и Z (которые мы видели при описании вывода top), другие возможные значения включают: D (непрерывный сон - обычно ожидает ввода / вывода), T (остановлен - обычно по управляющему сигналу). Некоторые дополнительные модификаторы включают: <(высокий приоритет - не подходит для других процессов), N (низкий приоритет - подходит для других процессов) или + (в группе процессов переднего плана). 
+Код, представляющий состояние процесса. Помимо `S`, `R` и `Z` (которые мы видели при описании вывода команды `top`), другие возможные значения включают: `D` (непрерывный сон - обычно ожидает ввода/вывода), `T` (остановлен - обычно по управляющему сигналу). Некоторые дополнительные модификаторы включают: `<`(высокий приоритет - не подходит для других процессов), `N` (низкий приоритет - подходит для других процессов) или `+` (в группе процессов переднего плана). 
 * `STARTED`  
 Время начала процесса. 
 * `TIME`  
 Накопленное процессорное время. 
 * `COMMAND`  
 Команда, запустившая процесс.
+
+
+# Упражнения для закрепления
+
+1. `oneko` - это забавная программа, которая отображает кошку, преследующую ваш курсор мыши. Если она еще не установлена на вашей системе, установите ее с помощью менеджера пакетов вашего дистрибутива. Мы будем использовать ее для изучения управления заданиями. 
+* Запустите программу. Как вы это делаете? 
+* Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как вы это делаете? Что на экране? 
+* Проверьте, сколько у вас сейчас работающих процессов. Что ты напечатаешь? Что на экране? 
+* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что на экране? 
+* Как узнать, что задание выполняется в фоновом режиме? 
+* Наконец, завершите задание, указав его идентификатор. Что ты напечатаешь?
+***
+***
+2.  Откройте для себя PID всех процессов, порожденных веб-сервером Apache HTTPD (apache2), с помощью двух разных команд: Завершите все процессы apache2 без использования их PID и двумя разными командами: Предположим, вам нужно завершить работу всех экземпляров apache2, и у вас нет времени узнать их идентификаторы PID. Как бы вы это сделали, используя kill с сигналом SIGTERM по умолчанию в однострочном файле: Начните сверху и взаимодействуйте с ним, выполнив следующие действия: Покажите лесное представление процессов: Показать полные пути процессов, различающих пространство пользователя и пространство ядра: Введите команду ps, чтобы отобразить все процессы, запущенные пользователем веб-сервера Apache HTTPD (www-data): Использование синтаксиса BSD: Использование синтаксиса UNIX: Использование синтаксиса GNU:
+
+
+# Упражнения на размышления
+
+
+# Резюме
+
+
+# Ответы на упражнения для закрепления
+
+
+
+
+# Ответы на упражнения для размышления
