Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -508,9 +508,17 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 # Упражнения для закрепления
 
 1. `oneko` - это забавная программа, которая отображает кошку, преследующую ваш курсор мыши. Если она еще не установлена на вашей системе, установите ее с помощью менеджера пакетов вашего дистрибутива. Мы будем использовать ее для изучения управления заданиями. 
-* Запустите программу. Как вы это делаете? 
+* Запустите программу. Как вы это сделаете?
+```
+   
+```
 * Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как вы это делаете? Что на экране? 
-* Проверьте, сколько у вас сейчас работающих процессов. Что ты напечатаешь? Что на экране? 
+    
+    
+    
+* Проверьте, сколько у вас сейчас работающих процессов. Что ты напечатаешь? Что на экране?
+***
+***
 * Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что на экране? 
 * Как узнать, что задание выполняется в фоновом режиме? 
 * Наконец, завершите задание, указав его идентификатор. Что ты напечатаешь?
