Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -513,18 +513,54 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
    
 ```
 * Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как вы это делаете? Что на экране? 
-    
-    
-    
+```
+
+```
 * Проверьте, сколько у вас сейчас работающих процессов. Что ты напечатаешь? Что на экране?
-***
-***
-* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что на экране? 
+```
+
+```
+* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что на экране?
+```
+
+```
 * Как узнать, что задание выполняется в фоновом режиме? 
+```
+
+```
 * Наконец, завершите задание, указав его идентификатор. Что ты напечатаешь?
-***
-***
-2.  Откройте для себя PID всех процессов, порожденных веб-сервером Apache HTTPD (apache2), с помощью двух разных команд: Завершите все процессы apache2 без использования их PID и двумя разными командами: Предположим, вам нужно завершить работу всех экземпляров apache2, и у вас нет времени узнать их идентификаторы PID. Как бы вы это сделали, используя kill с сигналом SIGTERM по умолчанию в однострочном файле: Начните сверху и взаимодействуйте с ним, выполнив следующие действия: Покажите лесное представление процессов: Показать полные пути процессов, различающих пространство пользователя и пространство ядра: Введите команду ps, чтобы отобразить все процессы, запущенные пользователем веб-сервера Apache HTTPD (www-data): Использование синтаксиса BSD: Использование синтаксиса UNIX: Использование синтаксиса GNU:
+```
+
+```
+2. Найдите `PID` всех процессов, порожденных веб-сервером Apache HTTPD(`apache2`), с помощью двух разных команд: 
+```
+
+```
+3. Завершите все процессы `apache2` без использования их PID и двумя разными командами: 
+```
+
+```
+4. Предположим, вам нужно завершить работу всех экземпляров `apache2`, и у вас нет времени узнать их идентификаторы `PID`. Как бы вы это сделали, используя `kill` с сигналом `SIGTERM` по умолчанию одной строкой: 
+```
+
+```
+5. Запустите `top` и взаимодействуйте с ним, выполнив следующие действия: 
+* Покажите список процессов в виде дерева: 
+
+
+* Покажите полные пути процессов, различающих пространство пользователя и пространство ядра: 
+
+
+6. Введите команду `ps`, чтобы отобразить все процессы, запущенные пользователем веб-сервера Apache HTTPD (`www-data`): 
+* Использование синтаксиса BSD: 
+
+
+* Использование синтаксиса UNIX: 
+
+
+* Использование синтаксиса GNU:
+
+
 
 
 # Упражнения на размышления
