--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -565,6 +565,22 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 
 # Упражнения на размышления
 
+1. Сигнал `SIGHUP` может использоваться как способ перезапуска определенных демонов. Например, отправка SIGHUP родительскому процессу веб-сервера *Apache HTTPD*(запущенному init) убивает его дочерние процессы. Однако родительский процесс повторно считывает свои файлы конфигурации, повторно открывает файлы журнала и порождает новый набор дочерних процессов. Выполните следующие задачи: 
+* Запустите веб-сервер: 
+* Убедитесь, что вы знаете PID родительского процесса: 
+* Сделайте перезапуск веб-сервера Apache HTTPD, отправив ему сигнал SIGHUP родительскому процессу: 
+* Убедитесь, что родитель не был убит и были созданы новые дочерние элементы: 
+2. Хотя изначально вывод `ps` был статическим, его можно превратить в динамический, объединив `ps` и `watch`. Мы будем отслеживать веб-сервер *Apache HTTPD* на предмет новых подключений. Перед выполнением задач, описанных ниже, рекомендуется прочитать описание директивы `MaxConnectionsPerChild` в [Apache MPM Common Directives]:https://httpd.apache.org/docs/current/mod/mpm_common.html. 
+* Добавьте директиву `MaxConnectionsPerChild` со значением 1 в файл конфигурации apache2 - в *Debian* и производных, который находится в `/etc/apache2/apache2.conf`; в семействе *CentOS* в `/etc/httpd/conf/httpd.conf`. Не забудьте перезапустить `apache2`, чтобы изменения вступили в силу. 
+* Введите команду, которая использует `watch`, `ps` и `grep` для соединений `apache2`. 
+* Теперь откройте веб-браузер или используйте браузер командной строки, например `lynx`, чтобы установить соединение с веб-сервером через его IP-адрес. Что вы наблюдаете на выходе `watch`? 
+3. Как вы узнали, по умолчанию `top` сортирует задачи по проценту использования ЦП в порядке убывания (более высокие значения вверху). Это поведение можно изменить с помощью интерактивных клавиш `M` (использование памяти), `N` (уникальный идентификатор процесса), `T` (время работы) и `P` (процент времени ЦП). Однако вы также можете отсортировать список задач по своему вкусу, запустив `top` с помощью параметра `-o` (для получения дополнительной информации проверьте страницу руководства `top`). Теперь выполните следующие задачи: 
+* Запустите `top`, чтобы задачи были отсортированы по использованию памяти: 
+* Убедитесь, что вы ввели правильную команду, выделив столбец памяти: 
+4. `ps` также имеет параметр `o`, чтобы указать столбцы, которые вы хотите показать. Изучите этот вариант и выполните следующие задачи: 
+* Запустите `ps`, чтобы отображалась только информация о пользователе, процентах используемой памяти, процентах используемого процессорного времени и полной команде: 
+* Теперь запустите `ps`, чтобы отображалась только информация о пользователе и названии программ, которые он использует:
+
 
 # Резюме
 
