Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -587,7 +587,7 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 ```
 
 2. Хотя изначально вывод `ps` был статическим, его можно превратить в динамический, объединив `ps` и `watch`. Мы будем отслеживать веб-сервер *Apache HTTPD* на предмет новых подключений. Перед выполнением задач, описанных ниже, рекомендуется прочитать описание директивы `MaxConnectionsPerChild` в [Apache MPM Common Directives](https://httpd.apache.org/docs/current/mod/mpm_common.html). 
-* Добавьте директиву `MaxConnectionsPerChild` со значением 1 в файл конфигурации apache2 - в *Debian* и производных, который находится в `/etc/apache2/apache2.conf`; в семействе *CentOS* в `/etc/httpd/conf/httpd.conf`. Не забудьте перезапустить `apache2`, чтобы изменения вступили в силу. 
+* Добавьте директиву `MaxConnectionsPerChild` со значением 1 в файл конфигурации apache2 - в *Debian* подобны ОС, он находится в `/etc/apache2/apache2.conf`; в семействе *CentOS* в `/etc/httpd/conf/httpd.conf`. Не забудьте перезапустить `apache2`, чтобы изменения вступили в силу. 
 ```
 
 ```
@@ -613,11 +613,52 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 
 4. `ps` также имеет параметр `o`, чтобы указать столбцы, которые вы хотите показать. Изучите этот вариант и выполните следующие задачи: 
 * Запустите `ps`, чтобы отображалась только информация о пользователе, процентах используемой памяти, процентах используемого процессорного времени и полной команде: 
+```
+
+```
 * Теперь запустите `ps`, чтобы отображалась только информация о пользователе и названии программ, которые он использует:
+```
+
+```
 
 
 # Резюме
 
+В этом уроке вы узнали о *заданиях* и *контроле над ними*. Следует помнить о следующих важных фактах и концепциях: 
+* Задания - это процессы, которые отправляются в фоновый режим. 
+* Помимо идентификатора процесса, при создании, заданиям также назначается идентификатор задания. 
+* Для управления заданиями требуется спецификация задания (`jobpec`). 
+* Задания могут быть переведены на передний план, отправлены на задний план, приостановлены и прекращены (или *уничтожены*). 
+* Задание можно отсоединить от терминала и сеанса, в котором оно было создано.
+
+
+Точно так же мы также обсудили концепцию процессов и мониторинга процессов. Наиболее актуальные идеи: 
+* Процессы - это запущенные программы. 
+* Процессы можно контролировать. 
+* Различные утилиты позволяют нам узнавать идентификаторы процессов, а также посылать им сигналы для их завершения. 
+* Сигналы могут быть указаны по имени (например, `-SIGTERM`), номеру (например, `-15`) или параметру (например, `-s SIGTERM`). 
+* `top` и `ps` очень эффективны, когда дело касается процессов мониторинга. Результат первого является динамическим и постоянно обновляется; с другой стороны, `ps` показывает вывод статически. 
+
+
+Команды, используемые в этом уроке: 
+
+* рабочие места Отображение активных вакансий и их статуса. 
+* спать Задержка на определенное время. 
+* фг Выведите работу на передний план. 
+* bg Переместить задание на задний план. 
+* убийство Прекратить работу. 
+* нету Отсоединить задание от сеанса / терминала. 
+* выход Выйти из текущей оболочки. 
+* хвост Показать самые последние строки в файле. 
+* смотреть Выполните команду несколько раз (по умолчанию цикл составляет 2 секунды). 
+* время безотказной работы Отображение продолжительности работы системы, количества текущих пользователей и средней загрузки системы. 
+* бесплатно Отображение использования памяти. 
+* pgrep Найдите идентификатор процесса по имени. 
+* пидоф Найдите идентификатор процесса по имени. 
+* pkill Отправить сигнал процессу по имени. 
+* убить всех Убить процесс (ы) по имени. 
+* вершина Отображение процессов Linux. 
+* пс Сообщите снимок текущих процессов.
 
 # Ответы на упражнения для закрепления
 
