Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -642,26 +642,43 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 
 Команды, используемые в этом уроке: 
 
-* рабочие места Отображение активных вакансий и их статуса. 
-* спать Задержка на определенное время. 
-* фг Выведите работу на передний план. 
-* bg Переместить задание на задний план. 
-* убийство Прекратить работу. 
-* нету Отсоединить задание от сеанса / терминала. 
-* выход Выйти из текущей оболочки. 
-* хвост Показать самые последние строки в файле. 
-* смотреть Выполните команду несколько раз (по умолчанию цикл составляет 2 секунды). 
-* время безотказной работы Отображение продолжительности работы системы, количества текущих пользователей и средней загрузки системы. 
-* бесплатно Отображение использования памяти. 
-* pgrep Найдите идентификатор процесса по имени. 
-* пидоф Найдите идентификатор процесса по имени. 
-* pkill Отправить сигнал процессу по имени. 
-* убить всех Убить процесс (ы) по имени. 
-* вершина Отображение процессов Linux. 
-* пс Сообщите снимок текущих процессов.
+* `jobs`  
+Отображение активных вакансий и их статуса. 
+* `sleep`  
+Задержка на определенное время. 
+* `fg`  
+Выведите работу на передний план. 
+* `bg`  
+Переместить задание на задний план. 
+* `kill`  
+Прекратить работу. 
+* `nohup`  
+Отсоединить задание от сеанса / терминала. 
+* `exit`  
+Выйти из текущей оболочки. 
+* `tail`  
+Показать самые последние строки в файле. 
+* `watch`  
+Выполните команду несколько раз (по умолчанию цикл составляет 2 секунды). 
+* `uptime`  
+Отображение продолжительности работы системы, количества текущих пользователей и средней загрузки системы. 
+* `free`  
+Отображение использования памяти. 
+* `pgrep`  
+Найдите идентификатор процесса по имени. 
+* `pidof`  
+Найдите идентификатор процесса по имени. 
+* `pkill`  
+Отправить сигнал процессу по имени. 
+* `killall`  
+Убить процесс(ы) по имени. 
+* `top`  
+Отображение процессов Linux. 
+* `ps`  
+Сообщите снимок текущих процессов.
+
 
 # Ответы на упражнения для закрепления
-
 
 
 
