Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -32,20 +32,13 @@ $ jobs
 ```
 Поясним результат:
 
-`[1]` 
-
+* `[1]`  
 Это число является идентификатором задания и может использоваться - перед ним стоит символ процента (`%`) - для изменения статуса задания с помощью утилит `fg`, `bg` и `kill` (как будет показано позже). 
-
-`+` 
-
+* `+`  
 Знак «плюс» указывает на текущее задание по умолчанию (то есть последнее приостановленное или отправленное в фоновом режиме). Предыдущее задание помечается знаком минус (`-`). Любые другие предыдущие работы не помечаются. 
-
-`Stopped` 
-
+* `Stopped`  
 Описание статуса работы. 
-
-`sleep 60` 
-
+* `sleep 60`  
 Сама команда или задание. 
 
 
@@ -55,21 +48,13 @@ $ jobs -l
 [1]+  1114 Stopped                 sleep 60
 ```
 Остальные возможные варианты работы: 
-
-`-n` 
-
+* `-n`  
 Перечисляет только процессы, которые изменили статус с момента последнего уведомления. Возможный статус: "Работает", "Остановлен", "Завершено" или "Готово". 
-
-`-p` 
-
+* `-p`  
 Перечисляет идентификаторы процессов. 
-
-`-r` 
-
+* `-r`  
 Перечисляет только запущенные задания. 
-
-`-s` 
-
+* `-s`  
 Список только остановленных (или приостановленных) заданий.
 
 >Помните, что у задания есть как идентификатор `задания`, так и `идентификатор процесса` (PID).
@@ -79,39 +64,31 @@ $ jobs -l
 
 Команде `jobs`, а также другим утилитам, таким как `fg`, `bg` и `kill` (которые вы увидите в следующем разделе), требуется спецификация задания (или `jobspec`), чтобы действовать в соответствии с конкретным заданием. Как мы только что видели, это может быть - и обычно это - идентификатор задания, которому предшествует `%`. Однако возможны и другие спецификации работы. Давайте посмотрим на них: 
 
-`%n` 
-
+* `%n`  
 Работа с идентификационным номером `n`:
 ```
 $ jobs %1
 [1]+  Stopped                 sleep 60
 ```
-
-`%str`
-
+* `%str`  
 Задание, командная строка которого начинается с `str`:
 ```
 $ jobs %sl
 [1]+  Stopped                 sleep 60
 ```
-
-`%?str` 
-
+* `%?str`  
 Задание, командная строка которого содержит `str`:
 ```
 $ jobs %?le
 [1]+  Stopped                 sleep 60
 ```
-
-`%+` или `%%`
-
+* `%+` или `%%`  
 Текущее задание (последнее было запущено в фоновом режиме или приостановлено на переднем плане):
 ```
 $ jobs %+
 [1]+  Stopped                 sleep 60
 ```
-`%-` 
-
+* `%-`  
 Предыдущее задание (то, которое было `%+` до задания по умолчанию, текущее):
 ```
 $ jobs %-
@@ -546,21 +523,26 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 ```
 5. Запустите `top` и взаимодействуйте с ним, выполнив следующие действия: 
 * Покажите список процессов в виде дерева: 
+```
 
-
+```
 * Покажите полные пути процессов, различающих пространство пользователя и пространство ядра: 
+```
 
-
+```
 6. Введите команду `ps`, чтобы отобразить все процессы, запущенные пользователем веб-сервера Apache HTTPD (`www-data`): 
 * Использование синтаксиса BSD: 
+```
 
-
+```
 * Использование синтаксиса UNIX: 
+```
 
-
+```
 * Использование синтаксиса GNU:
+```
 
-
+```
 
 
 # Упражнения на размышление
@@ -643,31 +625,31 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 Команды, используемые в этом уроке: 
 
 * `jobs`  
-Отображение активных вакансий и их статуса. 
+Отображение активных заданий и их статуса. 
 * `sleep`  
-Задержка на определенное время. 
+Приостановка процесса на определенное время. 
 * `fg`  
-Выведите работу на передний план. 
+Перевести задание на передний план. 
 * `bg`  
-Переместить задание на задний план. 
+Перевести задание в фоновый режим. 
 * `kill`  
-Прекратить работу. 
+Завершить задание. 
 * `nohup`  
-Отсоединить задание от сеанса / терминала. 
+Отсоединить задание от сеанса/терминала. 
 * `exit`  
 Выйти из текущей оболочки. 
 * `tail`  
 Показать самые последние строки в файле. 
 * `watch`  
-Выполните команду несколько раз (по умолчанию цикл составляет 2 секунды). 
+Выполнять команду повторно(по умолчанию цикл составляет 2 секунды). 
 * `uptime`  
-Отображение продолжительности работы системы, количества текущих пользователей и средней загрузки системы. 
+Отображение продолжительности работы системы, количества текущих пользователей и средней нагрузки на систему. 
 * `free`  
 Отображение использования памяти. 
 * `pgrep`  
-Найдите идентификатор процесса по имени. 
+Найти идентификатор процесса по имени. 
 * `pidof`  
-Найдите идентификатор процесса по имени. 
+Найти идентификатор процесса по имени. 
 * `pkill`  
 Отправить сигнал процессу по имени. 
 * `killall`  
@@ -675,11 +657,72 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 * `top`  
 Отображение процессов Linux. 
 * `ps`  
-Сообщите снимок текущих процессов.
+Показать список текущих процессов статически.
 
 
 # Ответы на упражнения для закрепления
 
+1. `oneko` - это забавная программа, которая отображает кошку, преследующую ваш курсор мыши. Если она еще не установлена на вашей системе, установите ее с помощью менеджера пакетов вашего дистрибутива. Мы будем использовать ее для изучения управления заданиями. 
+* Запустите программу. Как вы это сделаете?  
+Наберите `oneko` в терминале.
+* Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как вы это делаете? Что на экране?  
+Нажмите комбинацию клавиш `Ctrl`+`z`:
+```
+[1]+  Stopped                 oneko
+```
+* Проверьте, сколько у вас сейчас работающих процессов. Что ты напечатаешь? Что на экране?
+```
+$ jobs
+[1]+  Stopped                 oneko
+```
+* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что на экране? Как узнать, что задание выполняется в фоновом режиме? 
+```
+$ bg %1
+[1]+ oneko &
+```  
+Кот снова движется. 
+* Наконец, завершите задание, указав его идентификатор. Что ты напечатаешь?  
+```
+$ kill %1
+```
+2. Найдите `PID` всех процессов, порожденных веб-сервером Apache HTTPD(`apache2`), с помощью двух разных команд: 
+```
+$ pgrep apache2
+$ pidof apache2
+```
+3. Завершите все процессы `apache2` без использования их PID и двумя разными командами: 
+```
+$ pkill apache2
+$ killall apache2
+```
+4. Предположим, вам нужно завершить работу всех экземпляров `apache2`, и у вас нет времени узнать их идентификаторы `PID`. Как бы вы это сделали, используя `kill` с сигналом `SIGTERM` по умолчанию одной строкой: 
+```
+$ kill $(pgrep apache2)
+$ kill `pgrep apache2`
+
+$ kill $(pidof apache2)
+$ kill `pidof apache2`
+```
+>	
+Since SIGTERM (15) is the default signal, it is not necessary to pass any options to kill.
+5. Запустите `top` и взаимодействуйте с ним, выполнив следующие действия: 
+* Покажите список процессов в виде дерева:  
+Нажмите `V`
+* Покажите полные пути процессов, различающих пространство пользователя и пространство ядра:  
+Нажмите `c`
+6. Введите команду `ps`, чтобы отобразить все процессы, запущенные пользователем веб-сервера Apache HTTPD (`www-data`): 
+* Использование синтаксиса BSD: 
+```
+$ pu U www-data
+```
+* Использование синтаксиса UNIX: 
+```
+$ ps -u www-data
+```
+* Использование синтаксиса GNU:
+```
+$ ps --user www-data
+```
 
 
 # Ответы на упражнения для размышления
